--- a/Prototype 1/views/Pages/profile.ejs
+++ b/Prototype 1/views/Pages/profile.ejs
@@ -45,7 +45,7 @@
             </div>
             <div class="row mb-2">
                 <div class="col-sm-2 theme-black">Generations Restantes</div>
-                <div class="col-sm-4 theme-yellow"><%= user.gen_restante %></div>
+                <div class="col-sm-4 theme-yellow"><%= user.gens%></div>
             </div>
             <div class="row mb-2">
                 <div class="col-sm-2 theme-black">Abonnement</div>
