Revert "Merge branch 'main' of https://github.com/TalalJD/TP-SESSION-4-420-4GW"
This reverts commit 0e28d8350e595462dbdc4192e3ddedba3cc74cf4, reversing
changes made to 337259bd15c3ef1e48bf1b2f0e6ab2f15f79a4fa.

--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include ('../partials/head') %>
+<%- include('../partials/head') %>
 <link rel="stylesheet" href="/app.css">
-
 <body>
-    <div class="side-bar">
-            <a id="calendarIcon">
-                <i class="fa-solid fa-calendar-days icons" style="color: #000000;" name="calendarIcon"></i>
-                <span>Calendrier</span>
-            </a>
-    
-            <a id="profileIcon">
-                <i class="fa-solid fa-user icons" style="color: #000000;" name="profileIcon"></i>
-                <span>Profile</span>
+    <div class="main-container">
+        <div class="side-bar">
+            <!-- Lien pour l'icône du calendrier -->
+            <a href="/calendar">
+                <i class="fa-solid fa-calendar-days icons" style="color: black;"></i>
             </a>
             
-            <a id="plusIcon"> 
-                <i class="fa-sharp fa-solid fa-plus icons" style="color: #000000;" name="plusIcon"></i>
-                <span>Entrainements</span>
+            <!-- Lien pour l'icône de l'utilisateur -->
+            <a href="/user">
+                <i class="fa-solid fa-user icons" style="color: black;"></i>
             </a>
-           
-            <a href="/" id="exitIcon">
-                <i class="fa-solid fa-right-from-bracket icons" style="color: #000000;" name="exitIcon"></i>
-                <span>Acceuil</span>
+            
+            <!-- Lien pour ajouter (l'icône "+") dans la barre latérale -->
+            <a id="add-icon-sidebar" href="#">
+                <i class="fa-sharp fa-solid fa-plus icons " style="color: black;"></i>
+            </a>
+            
+            <!-- Lien pour la déconnexion (l'icône de sortie) -->
+            <a href="/logout">
+                <i class="fa-solid fa-right-from-bracket icons" style="color: black;"></i>
             </a>
         </div>
 
@@ -30,67 +30,8 @@
             <!-- Les cartes seront ajoutées ici par JavaScript -->
         </div>
     </div>
-    <div class="profile-page hidden">
-        <style>
-            .theme-yellow, .theme-black {
-                padding: 10px; /* Augmente l'espace interne */
-                margin-bottom: 10px; /* Espacement entre les containers */
-            }
-            .theme-yellow {
-                background-color: #D5C069;
-                color: black;
-            }
-            .theme-black {
-                background-color: black;
-                color: #D5C069;
-            }
-            .user-image { 
-                max-width: 100%; 
-                height: auto; 
-                object-fit: cover; /* Ajuste les proportions */
-            }
-            .row.align-items-stretch {
-                display: flex;
-                flex-wrap: wrap;
-            }
-        </style>
-        <div class="container mt-4">
-            <div class="row align-items-stretch">
-                <!-- Colonne pour les informations -->
-                <div class="col-md-8">
-                    <div class="row mb-2">
-                        <div class="col-sm-2 theme-black">Id</div>
-                        <div class="col-sm-4 theme-yellow"><%= user._id %></div>
-                    </div>
-                    <!-- Répétez pour les autres lignes d'informations -->
-                    <div class="row mb-2">
-                        <div class="col-sm-2 theme-black">Nom</div>
-                        <div class="col-sm-4 theme-yellow"><%= user.nom %></div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-sm-2 theme-black">Prenom</div>
-                        <div class="col-sm-4 theme-yellow"><%= user.prenom %></div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-sm-2 theme-black">Courriel</div>
-                        <div class="col-sm-4 theme-yellow"><%= user.courriel %></div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-sm-2 theme-black">Generations Restantes</div>
-                        <div class="col-sm-4 theme-yellow"><%= user.gens %></div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-sm-2 theme-black">Abonnement</div>
-                        <div class="col-sm-4 theme-yellow"><%= abonnement.nom_abonnement %></div>
-                    </div>
-                </div>
-                <!-- Colonne pour l'image, placée à la droite des détails -->
-                <div class="col-md-4">
-                    <img src="imgs/flexingMan.png" alt="Image Utilisateur" class="user-image">
-                </div>
-            </div>
-        </div>
-    </div>
+
+    <script src="https://kit.fontawesome.com/df1a2f4d51.js" crossorigin="anonymous"></script>
 
     <script>
         // Fonction pour ajouter une carte
@@ -138,9 +79,7 @@
         document.querySelector('.card-container').addEventListener('DOMMouseScroll', enableHorizontalScroll, false);
     </script>
     
-<script src="https://kit.fontawesome.com/df1a2f4d51.js" crossorigin="anonymous"></script>
-<script src="/app.js"></script>
+
     <%- include('../partials/footer.ejs') %>
 </body>
 </html>
-
