Fix abonnement changement + ajout de valeurs workout

--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -78,7 +78,7 @@
                     </div>
                     <div class="row mb-2">
                         <div class="col-sm-2 theme-black">Abonnement</div>
-                        <div class="col-sm-4 theme-yellow"><%= abonnement.nom_abonnement %></div>
+                        <div class="col-sm-4 theme-yellow"><%= abonnement.nom_Abonnement %></div>
                     </div>
                 </div>
                 <!-- Colonne pour l'image, placée à la droite des détails -->
