--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -89,6 +89,10 @@
         </div>
     </div>
 
+    <div class="exercice-card hidden">
+        <i class="fa-sharp fa-solid fa-plus icons" style="color: #000000;" name="plusIcon"></i>
+    </div>
+    
 
 <script src="https://kit.fontawesome.com/df1a2f4d51.js" crossorigin="anonymous"></script>
 <script src="/app.js"></script>
