--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -50,6 +50,11 @@
                 display: flex;
                 flex-wrap: wrap;
             }
+            .btn-outline-light {
+    background-color: #D5C069; /* Change background color */
+    color: black; /* Change text color */
+    /* Add more styles as needed */
+}
         </style>
         <div class="container mt-4">
             <div class="row align-items-stretch">
@@ -79,6 +84,14 @@
                     <div class="row mb-2">
                         <div class="col-sm-2 theme-black">Abonnement</div>
                         <div class="col-sm-4 theme-yellow"><%= abonnement.nom_Abonnement %></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <a href="/Abonnement">
+                                <button class="btn btn-outline-light">Changer mon abonnement</button>
+                            </a>
+                            
+                        </div>
                     </div>
                 </div>
                 <!-- Colonne pour l'image, placée à la droite des détails -->
