--- a/Prototype 1/views/partials/head.ejs
+++ b/Prototype 1/views/partials/head.ejs
@@ -13,5 +13,5 @@
     <link rel="stylesheet" href="/googleStyle.css">
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
