Search Function done

--- a/Prototype 1/views/Pages/CreationTemplates.ejs
+++ b/Prototype 1/views/Pages/CreationTemplates.ejs
@@ -1,44 +1,5 @@
 <%- include ("../partials/header.ejs") %>
-<style>
-.searchBody{
-    display: flex;
-    flex-direction: row; /* Arrange children vertically */
-    align-items: center; /* Center items horizontally within the container */
-    justify-content: space-evenly; /* Distribute space evenly between children */
-    width: 90%; /* Adjust width as needed */
-    background-color: #333; /* Example background color */
-    padding: 20px;
-    border-radius: 10px; /* Rounded corners */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for better visibility */
-    margin: auto; /* Center the searchBody horizontally and vertically if inside another flex container or full page */
-}
-.searchFactor{
-    display: flex;
-    flex-direction: row;
-    margin-left: 10px;
-    margin-bottom: 5px;
-}
-h4{
-    color: white;
-    width: 120px;
-}
-p{
-    color:white;
-}
-input{
-    border-radius: 15px;
-    margin-left: 5px;
-}
-button {
-    border-radius: 15px;
-    margin-left: 5px;
-}
-.searchFactors{
-    display: flex;
-    flex-direction: column;
-}
-</style>
-
+<link rel="stylesheet" href="/ExoStyles.css">
 <div class="searchBody">
     <div class="searchFactors">
         <div class="searchFactor">
