Revert "fix anamition + simplification du js, commencement de la page de template d'entrainement"
This reverts commit a0ea329ad55b57df38502e1f5d4a73a28a3940b8.

--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -103,23 +103,7 @@
     </div>
 
     <div class="exercice-card hidden">
-        <i class="fa-sharp fa-solid fa-plus icons" style="color: #000000;" name="plusIcon" id = "nouvelleCard"></i>
-    </div>
-    <div class="exercice-templates hidden">
-        <div class="container">
-            <div class="left-side">
-                <!-- Cards go here -->
-                <div class="card1"></div>
-                <div class="card1"></div>
-                <!-- Repeat for other cards -->
-            </div>
-            <div class="line"></div> <!-- Moved the line div inside the container -->
-            <div class="right-side">
-                <!-- Text input boxes go here -->
-                <input type="text" placeholder="Type here">
-                <input type="text" placeholder="Type here">
-            </div>
-        </div>
+        <i class="fa-sharp fa-solid fa-plus icons" style="color: #000000;" name="plusIcon"></i>
     </div>
     
 
