--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -7,18 +7,6 @@
     transition: left 0.5s ease; /* Animation de glissement */
     z-index: 0;
 }
-
-
-
-.exercice-templates{
-    position: absolute;
-    top: 0;
-    left: 500%;
-    width: 100%;
-    height: 100%;
-    transition: left 0.5s ease; /* Animation de glissement */
-    z-index: 0;
-}
 .exercice-card {
     position: absolute;
     top: 50%; /* Position the top edge of the card at the vertical center of the parent container */
@@ -132,47 +120,7 @@
     flex-shrink: 0;
 }
 
-.left-side {
-    height: 100%;
-    overflow-y: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20px, 1fr)); /* Adjust grid to fit cards */
-    gap: 35px;
-    padding: 20px;
-    align-items: start;
-}
-
-.line {
-    width: 2px;
-    height: 100%;
-    background-color: white;
-}
-
-.right-side {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%; /* Set the width to occupy the other half of the page */
-    height: 100%;
-    overflow: hidden; /* Ensure content overflow is hidden */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-/* Individual card */
-/* Individual card */
-.card1 {
-    width: 150; /* Ensure the cards take up the full width of their grid cell */
-    height: 150;
-    background-color: #D5C069;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-}
+/* Card content */
 
 
   
