--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -1,3 +1,15 @@
+.Choisir-Entrainement{
+    position: absolute;
+    top: 0;
+    left: 550%; /*slide la page a droit*/
+    width: 100%; 
+    height: 100%; 
+    transition: left 0.5s ease; /* Animation de glissement */
+    z-index: 0;
+}
+
+
+
 .profile-page {
     position: absolute;
     top: 0;
