--- a/Prototype 1/views/Pages/abonnement.ejs
+++ b/Prototype 1/views/Pages/abonnement.ejs
@@ -19,7 +19,7 @@
             <% if (user) { %>
                 <button type="button" onclick="showPaymentForm('1')" id="but1" <% if (user.abonnement_id_abonnement === 1) { %>disabled<% } %>>Confirmer</button>
             <% } else { %>
-                <button id="loginButton1" type="button">Connectez-vous pour s'abonner</button>
+                <button id="loginButton1" type="button" onclick="redirectToLogin()">Connectez-vous pour s'abonner</button>
             <% } %>
         </div>
 
@@ -33,7 +33,7 @@
             <% if (user) { %>
                 <button type="button" onclick="showPaymentForm('2')" id="but2" <% if (user.abonnement_id_abonnement === 2) { %>disabled<% } %>>Confirmer</button>
             <% } else { %>
-                <button id="loginButton2" type="button">Connectez-vous pour s'abonner</button>
+                <button id="loginButton2" type="button" onclick="redirectToLogin()">Connectez-vous pour s'abonner</button>
             <% } %>
         </div>
 
@@ -48,7 +48,7 @@
             <% if (user) { %>
                 <button type="button" onclick="showPaymentForm('3')" id="but3" <% if (user.abonnement_id_abonnement === 3) { %>disabled<% } %>>Confirmer</button>
             <% } else { %>
-                <button id="loginButton3" type="button">Connectez-vous pour s'abonner</button>
+                <button id="loginButton3" type="button" onclick="redirectToLogin()">Connectez-vous pour s'abonner</button>
             <% } %>
         </div>
     </div>
@@ -70,9 +70,20 @@
 
     <script>
         function showPaymentForm(planId) {
-            document.getElementById('paymentForm').style.display = 'block';
-            document.getElementById('planId').value = planId;
-            document.getElementById('paymentForm').scrollIntoView({ behavior: 'smooth' });
+    if (planId === '1') { // Vérifie si l'utilisateur a choisi l'abonnement gratuit
+        // Effectuer le changement d'abonnement ici sans afficher le formulaire de paiement
+        alert("Votre abonnement a été changé avec succès !");
+        return; // Sortir de la fonction pour éviter d'afficher le formulaire de paiement
+    }
+
+    document.getElementById('paymentForm').style.display = 'block';
+    document.getElementById('planId').value = planId;
+    document.getElementById('paymentForm').scrollIntoView({ behavior: 'smooth' });
+}
+
+        
+        function redirectToLogin() {
+            window.location.href = '/Connexion'; 
         }
     </script>
 </body>
