--- a/Prototype 1/views/Pages/connexion.ejs
+++ b/Prototype 1/views/Pages/connexion.ejs
@@ -60,7 +60,9 @@
                   <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                     <div class="d-flex flex-column align-items-center ">
                       <div class="text-center mb-4">
-                        <img src="/imgs/whiteTransp.png" style="width: 185px;" alt="logo">
+                        <a href="/">
+                          <img src="/imgs/whiteTransp.png" style="width: 185px" alt="Fitness logo">
+                      </a>
                       </div>
                       <div class="text-white px-3 py-4 p-md-5 mx-md-4">
                         <h4 class="mb-4">Dépassez les limites avec Energymize</h4>
