--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -36,11 +36,13 @@
 
 }
 .exercice-card i {
-    display: inline-block; /* Ensure the element takes up space */
-    width: auto; /* Allow the width to adjust based on content */
-    padding-right: 20px; /* Adjust padding as needed */
-    cursor: pointer; /* Change cursor to indicate clickability */
+    display: inline-block;
+    width: auto;
+    height: auto; /* Add height property */
+    padding: 30px; /* Add padding for better clickability */
+    cursor: pointer;
 }
+
 
 
 
