--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -27,8 +27,9 @@
     transition: left 0.5s ease; /* Animation de glissement */
     z-index: 0;
     width: 100%;
-    max-width: 200px;
-    height: 80%;
+    max-width: 250px;
+    height: 100%;
+    max-height: 450px;
     background-color: #D5C069 !important;
     border-radius: 10px;
     display: flex; /* Use flexbox */
