--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -22,24 +22,27 @@
 .exercice-card {
     position: absolute;
     top: 50%; 
-    transform: translate(-50%, -50%); /*Déplace la carte vers le haut et vers la gauche de la moitié de sa propre largeur et hauteur*/
+    left: 50%;
     margin-left: 17%;
-    transition: left 0.5s ease; /* Animation de glissement */
-    z-index: 0;
-    width: 15%;
+    transition: width 0.5s ease, height 0.5s ease; /* Add transition animation */
+    transform: translate(-50%, -50%); /* Center the card horizontally and vertically */
+    width: 80%; /* Adjust the width of the card */
+    max-width: 225px; /* Limit the maximum width of the card */
     height: 80%;
+    max-height: 800px; /* Limit the maximum height of the card */
     background-color: #D5C069 !important;
-    border-radius: 1%;
-    display: flex; /* Use flexbox */
-    justify-content: center; /* centrer l'element a l'horizontal */
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
     align-items: center;
     cursor: pointer;
-
 }
+
 .exercice-card i {
-    margin-right:5%;
+    margin-right: 5%; /* Adjust the margin as needed */
     cursor: pointer; 
 }
+
 
 
 
