--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -22,27 +22,24 @@
 .exercice-card {
     position: absolute;
     top: 50%; 
-    left: 50%;
+    transform: translate(-50%, -50%); /*Déplace la carte vers le haut et vers la gauche de la moitié de sa propre largeur et hauteur*/
     margin-left: 17%;
-    transition: width 0.5s ease, height 0.5s ease; /* Add transition animation */
-    transform: translate(-50%, -50%); /* Center the card horizontally and vertically */
-    width: 100%; /* Adjust the width of the card */
-    max-width: 225px; /* Limit the maximum width of the card */
-    height: 100%;
-    max-height: 800px; /* Limit the maximum height of the card */
+    transition: left 0.5s ease; /* Animation de glissement */
+    z-index: 0;
+    width: 15%;
+    height: 80%;
     background-color: #D5C069 !important;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
+    border-radius: 1%;
+    display: flex; /* Use flexbox */
+    justify-content: center; /* centrer l'element a l'horizontal */
     align-items: center;
     cursor: pointer;
-}
 
+}
 .exercice-card i {
-    margin-right: 5%; /* Adjust the margin as needed */
+    margin-right:5%;
     cursor: pointer; 
 }
-
 
 
 
