--- a/Prototype 1/views/Pages/abonnement.ejs
+++ b/Prototype 1/views/Pages/abonnement.ejs
@@ -57,6 +57,7 @@
 
     <!-- Formulaire de paiement -->
     <div id="paymentForm" style="display: none;">
+        <div id="paypal-button-container"></div>
         <h2>Formulaire de paiement</h2>
         <form action="/process_payment" method="POST">
             <input type="hidden" id="planId" name="planId" value="">
@@ -67,8 +68,10 @@
             <label for="cvv">CVV :</label>
             <input type="text" id="cvv" name="cvv" pattern="\d*" minlength="3" maxlength="3" required><br><br>
             <button type="submit">Payer</button>
+            
         </form>
     </div>
+    <script src="https://www.paypal.com/sdk/js?client-id=AS7gcs2OsninDvsU_PdPz9KM3eEe8scNrkpCj6CMja27alTMQtFpN7dlNWxFodo1SFzr2wjRJFIh3g5X&currency=USD"></script>
 
     <script>
         function showPaymentForm(planId) {
@@ -96,15 +99,38 @@
                 return; 
             }
     
-            document.getElementById('paymentForm').style.display = 'block';
-            document.getElementById('planId').value = planId;
-            document.getElementById('paymentForm').scrollIntoView({ behavior: 'smooth' });
+             document.getElementById('paymentForm').style.display = 'block';
+    document.getElementById('paypal-button-container').style.display = 'block'; // Afficher le bouton PayPal
+    document.getElementById('planId').value = planId;
+    document.getElementById('paymentForm').scrollIntoView({ behavior: 'smooth' });
         }
     
         function redirectToLogin() {
             window.location.href = '/Connexion';
         }
     </script>
+    <script>
+        paypal.Buttons({
+          createOrder: function(data, actions) {
+            return actions.order.create({
+              purchase_units: [{
+                amount: {
+                  value: '5.99' // Mettez à jour cette valeur en fonction de l'abonnement choisi
+                }
+              }]
+            });
+          },
+          onApprove: function(data, actions) {
+            return actions.order.capture().then(function(details) {
+              // Ici, vous pouvez appeler une route sur votre serveur pour finaliser l'abonnement
+              alert('Transaction completed by ' + details.payer.name.given_name);
+              // Redirection vers une page de succès
+              window.location.href = '/success-page';
+            });
+          }
+        }).render('#paypal-button-container');
+      </script>
+      
     
 </body>
 </html>
